--- a/examples/basic.html
+++ b/examples/basic.html
@@ -31,11 +31,11 @@
   </section>
 
   <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="../js/froala_editor.min.js"></script>
+  <script src="../js/froala_editor.js"></script>
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, autosave:true})
+          $('#edit').editable({inlineMode: false})
       });
   </script>
 </body>
