--- a/examples/textarea.html
+++ b/examples/textarea.html
@@ -35,7 +35,7 @@
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, autosave:true})
+          $('#edit').editable({inlineMode: false})
       });
   </script>
 </body>
