--- a/examples/inline.html
+++ b/examples/inline.html
@@ -37,7 +37,7 @@
 
   <script>
       $(function(){
-          $('#edit').editable({autosave:true})
+          $('#edit').editable({})
       });
   </script>
 </body>
