--- a/examples/custom_buttons.html
+++ b/examples/custom_buttons.html
@@ -35,7 +35,7 @@
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, buttons: ['bold', 'italic', 'alert', 'clear', 'image'], customButtons: {
+          $('#edit').editable({inlineMode: false, buttons: ['bold', 'italic', 'formatBlock', 'alert', 'clear', 'image'], blockTags: ['p'], customButtons: {
             alert: {
               title: 'Alert',
               icon: {
