--- a/examples/textarea.html
+++ b/examples/textarea.html
@@ -20,7 +20,6 @@
 <body>
   <section id="editor">
       <textarea id='edit' style="margin-top: 30px;">
-        
       </textarea>
   </section>
 
@@ -29,7 +28,7 @@
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, imageUploadURL: 'http://localhost:3000/upload_image'})
+          $('#edit').editable({inlineMode: false})
       });
   </script>
 </body>
