Preparing code for new release.

--- a/examples/init_on_image.html
+++ b/examples/init_on_image.html
@@ -19,7 +19,7 @@
 
 <body>
   <section id="editor">
-    <img class='edit' src="../img/cute_cat.jpg" alt="Cute cat" width="300" style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px;"/>
+    <img class='edit' src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px;"/>
 
     <div class="edit">Hello people. Here we are on the moon.</div>
   </section>
