--- a/examples/always_visible.html
+++ b/examples/always_visible.html
@@ -20,7 +20,7 @@
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-          <img src="../img/cute_cat.jpg" alt="Cute cat" width="300" style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px;"/>
+          <img src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px;"/>
 
           <h1>Click and edit</h1>
 
