--- a/examples/inverseSkin.html
+++ b/examples/inverseSkin.html
@@ -20,7 +20,7 @@
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-          <img src="../img/cute_cat.jpg" alt="Cute cat" width="300" style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px;"/>
+          <img src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px;"/>
 
           <h1>Click and edit</h1>
 
@@ -29,7 +29,7 @@
           <p><a href="http://google.com" title="Aenean sed hendrerit">Aenean sed hendrerit</a> velit. Nullam eu mi dolor. Maecenas et erat risus. Nulla ac auctor diam, non aliquet ante. Fusce ullamcorper, ipsum id tempor lacinia, sem tellus malesuada libero, quis ornare sem massa in orci. Sed dictum dictum tristique. Proin eros turpis, ultricies eu sapien eget, ornare rutrum ipsum. Pellentesque eros nisl, ornare nec ipsum sed, aliquet sollicitudin erat. Nulla tincidunt porta vehicula.</p>
 
           <p>Nullam laoreet imperdiet orci ac euismod. Curabitur vel lectus nisi. Phasellus accumsan aliquet augue, eu rutrum tellus iaculis in. Nunc viverra ultrices mollis. Curabitur malesuada nunc massa, ut imperdiet arcu lobortis sed. Cras ac arcu mauris. Maecenas id lectus nisl. Donec consectetur scelerisque quam at ultricies. Nam quis magna iaculis, condimentum metus ut, elementum metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus id tempus nisi.</p>
-          
+
           <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Foo" width="100"/>
       </div>
   </section>
