inverseSkin is replaced by theme.

--- a/examples/dark_theme.html
+++ b/examples/dark_theme.html
@@ -41,7 +41,7 @@
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, inverseSkin: true})
+          $('#edit').editable({inlineMode: false, theme: 'dark'})
       });
   </script>
 </body>
