--- a/examples/two_editors.html
+++ b/examples/two_editors.html
@@ -4,6 +4,7 @@
 	<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
   <link href="../css/froala_reset.min.css" rel="stylesheet" type="text/css">
+  <link href="../css/themes/dark.css" rel="stylesheet" type="text/css">
 
     <style>
         body {
@@ -33,7 +34,7 @@
   <script>
       $(function(){
           $('#edit').editable({inlineMode: false, zIndex: 2002})
-          $('#edit-i').editable({inlineMode: false, inverseSkin: true, zIndex: 2001})
+          $('#edit-i').editable({inlineMode: false, theme: 'dark', zIndex: 2001})
       });
   </script>
 </body>
