--- a/examples/simple_ampersand.html
+++ b/examples/simple_ampersand.html
@@ -36,7 +36,7 @@
 
   <script>
       $(function(){
-        $('#edit').editable({inlineMode: false, simpleAmpersand: true})
+        $('#edit').editable({inlineMode: false, simpleAmpersand: true, saveURL: 'test'})
       });
   </script>
 </body>
