--- a/examples/always_visible.html
+++ b/examples/always_visible.html
@@ -33,12 +33,23 @@
       </div>
   </section>
 
-  <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="../js/libs/beautify/beautify-html.js"></script>
+  <!--[if lt IE 9]>
+    <script src="../js/froala_editor_ie8.min.js"></script>
+  <![endif]-->
   <script src="../js/froala_editor.min.js"></script>
+  <script src="../js/plugins/tables.min.js"></script>
+  <script src="../js/plugins/colors.min.js"></script>
+  <script src="../js/plugins/fonts/fonts.min.js"></script>
+  <script src="../js/plugins/fonts/font_family.min.js"></script>
+  <script src="../js/plugins/fonts/font_size.min.js"></script>
+  <script src="../js/plugins/block_styles.min.js"></script>
+  <script src="../js/plugins/video.min.js"></script>
 
   <script>
       $(function(){
-          $('#edit').editable({alwaysVisible: true})
+          $('#edit').editable({alwaysVisible: true, disableRightClick: true})
       });
   </script>
 </body>
