--- a/examples/delete_image.html
+++ b/examples/delete_image.html
@@ -32,18 +32,30 @@
   </section>
 
   <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="../js/libs/beautify/beautify-html.js"></script>
   <script src="../js/froala_editor.min.js"></script>
+  <!--[if lt IE 9]>
+    <script src="../js/froala_editor_ie8.min.js"></script>
+  <![endif]-->
+  <script src="../js/froala_editor.min.js"></script>
+  <script src="../js/plugins/tables.min.js"></script>
+  <script src="../js/plugins/colors.min.js"></script>
+  <script src="../js/plugins/fonts/fonts.min.js"></script>
+  <script src="../js/plugins/fonts/font_family.min.js"></script>
+  <script src="../js/plugins/fonts/font_size.min.js"></script>
+  <script src="../js/plugins/block_styles.min.js"></script>
+  <script src="../js/plugins/video.min.js"></script>
 
   <script>
       $(function(){
           $('#edit').editable({
             inlineMode: false,
-            afterRemoveImageCallback: function(src) {
+            afterRemoveImageCallback: function($img) {
               // Make delete image request.
-              console.log (src);
+              console.log ($img);
             },
-            beforeDeleteImageCallback: function (src) {
-              console.log (src);
+            beforeRemoveImageCallback: function ($img) {
+              console.log ($img);
               alert('Image cannot be deleted!');
               return false;
             }});
