--- a/examples/inline.html
+++ b/examples/inline.html
@@ -5,17 +5,19 @@
 	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
   <link href="../css/froala_reset.min.css" rel="stylesheet" type="text/css">
 
-    <style>
-        body {
-            text-align: center;
-        }
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        section {
-            width: 80%;
-            margin: auto;
-            text-align: left;
-        }
-    </style>
+  <style>
+      body {
+          text-align: center;
+      }
+
+      section {
+          width: 80%;
+          margin: auto;
+          text-align: left;
+      }
+  </style>
 </head>
 
 <body>
@@ -34,7 +36,19 @@
   </section>
 
   <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="../js/libs/beautify/beautify-html.js"></script>
   <script src="../js/froala_editor.min.js"></script>
+  <!--[if lt IE 9]>
+    <script src="../js/froala_editor_ie8.min.js"></script>
+  <![endif]-->
+  <script src="../js/froala_editor.min.js"></script>
+  <script src="../js/plugins/tables.min.js"></script>
+  <script src="../js/plugins/colors.min.js"></script>
+  <script src="../js/plugins/fonts/fonts.min.js"></script>
+  <script src="../js/plugins/fonts/font_family.min.js"></script>
+  <script src="../js/plugins/fonts/font_size.min.js"></script>
+  <script src="../js/plugins/block_styles.min.js"></script>
+  <script src="../js/plugins/video.min.js"></script>
 
   <script>
       $(function(){
