--- a/examples/basic.html
+++ b/examples/basic.html
@@ -31,7 +31,7 @@
       </div>
   </section>
 
-  <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="../js/libs/jquery-1.10.2.min.js"></script>
   <script src="../js/libs/beautify/beautify-html.js"></script>
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
