--- a/examples/two_editors.html
+++ b/examples/two_editors.html
@@ -28,7 +28,7 @@
       </div>
   </section>
 
-  <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="../js/libs/jquery-1.10.2.min.js"></script>
   <script src="../js/libs/beautify/beautify-html.js"></script>
   <script src="../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
