--- a/examples/init_on_link.html
+++ b/examples/init_on_link.html
@@ -57,7 +57,12 @@
             nofollow: false,
             blank: false
           }
-        ]})
+        ],
+
+        linkClasses: {
+          'f-link': 'Simple link',
+          'r-link': 'Reversed link'
+        }})
 
         $('.edit2').editable()
       });
