--- a/examples/basic.html
+++ b/examples/basic.html
@@ -38,7 +38,7 @@
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
-  <script src="../../unminified/dist/js/froala_editor.js"></script>
+  <script src="../js/froala_editor.min.js"></script>
   <script src="../js/plugins/tables.min.js"></script>
   <script src="../js/plugins/colors.min.js"></script>
   <script src="../js/plugins/fonts/fonts.min.js"></script>
