--- a/examples/basic.html
+++ b/examples/basic.html
@@ -21,7 +21,7 @@
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-          <p><img src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right; padding-left: 10px; padding-bottom: 10px; padding-top: 10px;"/></p>
+          <img src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right;"/>
 
           <h1>Click and edit</h1>
 
