--- a/examples/inline_with_no_buttons.html
+++ b/examples/inline_with_no_buttons.html
@@ -23,7 +23,7 @@
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-          <img src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right; margin-left: 10px; margin-bottom: 10px; margin-top: 10px;"/>
+          <img src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right;"/>
 
           <h1>Click and edit</h1>
 
