--- a/examples/textarea.html
+++ b/examples/textarea.html
@@ -20,8 +20,12 @@
 
 <body>
   <section id="editor">
+    <form>
       <textarea id='edit' style="margin-top: 30px;">
       </textarea>
+
+      <input type="submit">
+    </form>
   </section>
 
   <script src="../js/libs/jquery-1.10.2.min.js"></script>
