--- a/examples/basic.html
+++ b/examples/basic.html
@@ -35,6 +35,7 @@
 
   <script src="../js/libs/jquery-1.10.2.min.js"></script>
   <script src="../js/libs/beautify/beautify-html.js"></script>
+  <script src="../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
