--- a/examples/always_visible.html
+++ b/examples/always_visible.html
@@ -3,7 +3,7 @@
 <head>
 	<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
-  <link href="../css/froala_reset.min.css" rel="stylesheet" type="text/css">
+
 
     <style>
         body {
@@ -21,7 +21,7 @@
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-          <img src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right;"/>
+          <img class="fr-fir" src="../img/old_clock.jpg" alt="Old Clock" width="300"/>
 
           <h1>Click and edit</h1>
 
@@ -34,16 +34,15 @@
   </section>
 
   <script src="../js/libs/jquery-1.10.2.min.js"></script>
-  <script src="../js/libs/beautify/beautify-html.js"></script>
+  <script src="../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
-  <script src="../js/froala_editor.min.js"></script>
   <script src="../js/plugins/tables.min.js"></script>
   <script src="../js/plugins/colors.min.js"></script>
-  <script src="../js/plugins/fonts/fonts.min.js"></script>
-  <script src="../js/plugins/fonts/font_family.min.js"></script>
-  <script src="../js/plugins/fonts/font_size.min.js"></script>
+  <script src="../js/plugins/media_manager.min.js"></script>
+  <script src="../js/plugins/font_family.min.js"></script>
+  <script src="../js/plugins/font_size.min.js"></script>
   <script src="../js/plugins/block_styles.min.js"></script>
   <script src="../js/plugins/video.min.js"></script>
 
