--- a/examples/init_on_image.html
+++ b/examples/init_on_image.html
@@ -3,7 +3,7 @@
 <head>
 	<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
-  <link href="../css/froala_reset.min.css" rel="stylesheet" type="text/css">
+
 
     <style>
         body {
@@ -20,23 +20,21 @@
 
 <body>
   <section id="editor">
-    <img class="edit" src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right;"/>
+    <img class='edit fr-fin' src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right;"/>
 
     <div class="edit">Hello people. Here we are on the moon.</div>
   </section>
 
   <script src="../js/libs/jquery-1.10.2.min.js"></script>
-  <script src="../js/libs/beautify/beautify-html.js"></script>
   <script src="../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
-  <script src="../js/froala_editor.min.js"></script>
   <script src="../js/plugins/tables.min.js"></script>
   <script src="../js/plugins/colors.min.js"></script>
-  <script src="../js/plugins/fonts/fonts.min.js"></script>
-  <script src="../js/plugins/fonts/font_family.min.js"></script>
-  <script src="../js/plugins/fonts/font_size.min.js"></script>
+  <script src="../js/plugins/media_manager.min.js"></script>
+  <script src="../js/plugins/font_family.min.js"></script>
+  <script src="../js/plugins/font_size.min.js"></script>
   <script src="../js/plugins/block_styles.min.js"></script>
   <script src="../js/plugins/video.min.js"></script>
 
