--- a/examples/inline.html
+++ b/examples/inline.html
@@ -3,27 +3,25 @@
 <head>
 	<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
-  <link href="../css/froala_reset.min.css" rel="stylesheet" type="text/css">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <style>
-      body {
-          text-align: center;
-      }
+    <style>
+        body {
+            text-align: center;
+        }
 
-      section {
-          width: 80%;
-          margin: auto;
-          text-align: left;
-      }
-  </style>
+        section {
+            width: 80%;
+            margin: auto;
+            text-align: left;
+        }
+    </style>
 </head>
 
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-          <img src="../img/old_clock.jpg" alt="Old Clock" width="300" style="float: right;"/>
+          <img class="fr-fir" src="../img/old_clock.jpg" alt="Old Clock" width="300"/>
 
           <h1>Click and edit</h1>
 
@@ -36,23 +34,20 @@
   </section>
 
   <script src="../js/libs/jquery-1.10.2.min.js"></script>
-  <script src="../js/libs/beautify/beautify-html.js"></script>
   <script src="../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
-  <script src="../js/froala_editor.min.js"></script>
   <script src="../js/plugins/tables.min.js"></script>
   <script src="../js/plugins/colors.min.js"></script>
-  <script src="../js/plugins/fonts/fonts.min.js"></script>
-  <script src="../js/plugins/fonts/font_family.min.js"></script>
-  <script src="../js/plugins/fonts/font_size.min.js"></script>
+  <script src="../js/plugins/font_family.min.js"></script>
+  <script src="../js/plugins/font_size.min.js"></script>
   <script src="../js/plugins/block_styles.min.js"></script>
   <script src="../js/plugins/video.min.js"></script>
 
   <script>
       $(function(){
-          $('#edit').editable({})
+        $('#edit').editable({})
       });
   </script>
 </body>
