--- a/examples/require_js/index.html
+++ b/examples/require_js/index.html
@@ -36,7 +36,7 @@
         "baseUrl": "js/lib",
         "paths": {
           "app": "../app",
-          "jquery": "//code.jquery.com/jquery-1.10.2",
+          "jquery": "//code.jquery.com/1.11.1",
           "froala_editor": "../../../../js/froala_editor.min"
         },
         shim: {
