--- a/examples/two_editors.html
+++ b/examples/two_editors.html
@@ -28,12 +28,13 @@
       </div>
   </section>
 
-  <script src="../js/libs/jquery-1.10.2.min.js"></script>
+  <script src="../js/libs/jquery-1.11.1.min.js"></script>
   <script src="../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
   <script src="../js/plugins/tables.min.js"></script>
+  <script src="../js/plugins/lists.min.js"></script>
   <script src="../js/plugins/colors.min.js"></script>
   <script src="../js/plugins/media_manager.min.js"></script>
   <script src="../js/plugins/font_family.min.js"></script>
