--- a/examples/basic.html
+++ b/examples/basic.html
@@ -33,12 +33,13 @@
       </div>
   </section>
 
-  <script src="../js/libs/jquery-1.10.2.min.js"></script>
+  <script src="../js/libs/jquery-1.11.1.min.js"></script>
   <script src="../../unminified/dist/js/froala_editor.js"></script>
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
   <script src="../js/plugins/tables.min.js"></script>
+  <script src="../js/plugins/lists.min.js"></script>
   <script src="../js/plugins/colors.min.js"></script>
   <script src="../js/plugins/font_family.min.js"></script>
   <script src="../js/plugins/font_size.min.js"></script>
