--- a/examples/events/blur.html
+++ b/examples/events/blur.html
@@ -32,7 +32,7 @@
       </div>
   </section>
 
-  <script src="../../js/libs/jquery-1.10.2.min.js"></script>
+  <script src="../../js/libs/jquery-1.11.1.min.js"></script>
   <script src="../../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../../js/froala_editor_ie8.min.js"></script>
@@ -51,7 +51,7 @@
           inlineMode: false
         });
 
-        $('#edit').on('editable.blur', function (editor) {
+        $('#edit').on('editable.blur', function (e, editor) {
           console.log ('blur');
         })
       });
