--- a/examples/events/contentChanged.html
+++ b/examples/events/contentChanged.html
@@ -30,7 +30,7 @@
       </div>
   </section>
 
-  <script src="../../js/libs/jquery-1.10.2.min.js"></script>
+  <script src="../../js/libs/jquery-1.11.1.min.js"></script>
   <script src="../../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../../js/froala_editor_ie8.min.js"></script>
@@ -49,7 +49,7 @@
             inlineMode: false
           });
 
-          $('#edit').on('editable.contentChanged', function (editor) {
+          $('#edit').on('editable.contentChanged', function (e, editor) {
             console.log ('Content changed');
           });
       });
