--- a/examples/init_on_image.html
+++ b/examples/init_on_image.html
@@ -25,12 +25,13 @@
     <div class="edit">Hello people. Here we are on the moon.</div>
   </section>
 
-  <script src="../js/libs/jquery-1.10.2.min.js"></script>
+  <script src="../js/libs/jquery-1.11.1.min.js"></script>
   <script src="../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
   <script src="../js/plugins/tables.min.js"></script>
+  <script src="../js/plugins/lists.min.js"></script>
   <script src="../js/plugins/colors.min.js"></script>
   <script src="../js/plugins/media_manager.min.js"></script>
   <script src="../js/plugins/font_family.min.js"></script>
