--- a/examples/language.html
+++ b/examples/language.html
@@ -44,11 +44,11 @@
   <script src="../js/plugins/font_size.min.js"></script>
   <script src="../js/plugins/block_styles.min.js"></script>
   <script src="../js/plugins/video.min.js"></script>
-  <script src="../js/langs/ro.js"></script>
+  <script src="../js/langs/pt_br.js"></script>
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, language: 'ro'})
+          $('#edit').editable({inlineMode: false, language: 'pt_br'})
       });
   </script>
 </body>
