--- a/examples/red_theme.html
+++ b/examples/red_theme.html
@@ -4,6 +4,7 @@
 	<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
 
+  <link href="../css/themes/red.css" rel="stylesheet" type="text/css">
 
     <style>
         body {
@@ -22,6 +23,8 @@
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
           <img class="fr-fir" src="../img/old_clock.jpg" alt="Old Clock" width="300"/>
+
+          <h1>Click and edit</h1>
 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec facilisis diam in odio iaculis blandit. Nunc eu mauris sit amet purus viverra gravida ut a dui. Vivamus nec rutrum augue, pharetra faucibus purus. Maecenas non orci sagittis, vehicula lorem et, dignissim nunc. Suspendisse suscipit, diam non varius facilisis, enim libero tincidunt magna, sit amet iaculis eros libero sit amet eros. Vestibulum a rhoncus felis. Nam lacus nulla, consequat ac lacus sit amet, accumsan pellentesque risus. Aenean viverra mi at urna mattis fermentum. Curabitur porta metus in tortor elementum, in semper nulla ullamcorper. Vestibulum mattis tempor tortor quis gravida. In rhoncus risus nibh. Nullam condimentum dapibus massa vel fringilla. Sed hendrerit sed est quis facilisis. Ut sit amet nibh sem. Pellentesque imperdiet mollis libero.</p>
 
@@ -47,7 +50,7 @@
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, enableScript: true})
+          $('#edit').editable({inlineMode: false, theme: 'red'})
       });
   </script>
 </body>
