--- a/examples/upload_pasted_images.html
+++ b/examples/upload_pasted_images.html
@@ -49,7 +49,7 @@
 
   <script>
       $(function(){
-        $('#edit').editable({inlineMode: false})
+        $('#edit').editable({inlineMode: false, pastedImagesUploadURL: '/save_uploaded_images'})
       });
   </script>
 </body>
