--- a/examples/tabSpaces_disabled.html
+++ b/examples/tabSpaces_disabled.html
@@ -49,7 +49,7 @@
 
   <script>
       $(function(){
-        $('#edit').editable({inlineMode: false})
+        $('#edit').editable({inlineMode: false, tabSpaces: false})
       });
   </script>
 </body>
