--- a/examples/themes/gray_theme.html
+++ b/examples/themes/gray_theme.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
+	<link href="../../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="../../css/froala_editor.min.css" rel="stylesheet" type="text/css">
 
-  <link href="../css/themes/red.css" rel="stylesheet" type="text/css">
+  <link href="../../css/themes/gray.css" rel="stylesheet" type="text/css">
 
     <style>
         body {
@@ -22,7 +22,7 @@
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-          <img class="fr-fir" src="../img/old_clock.jpg" alt="Old Clock" width="300"/>
+          <img class="fr-fir" src="../../img/old_clock.jpg" alt="Old Clock" width="300"/>
 
           <h1>Click and edit</h1>
 
@@ -34,23 +34,23 @@
       </div>
   </section>
 
-  <script src="../js/libs/jquery-1.11.1.min.js"></script>
-  <script src="../js/froala_editor.min.js"></script>
+  <script src="../../js/libs/jquery-1.11.1.min.js"></script>
+  <script src="../../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
-    <script src="../js/froala_editor_ie8.min.js"></script>
+    <script src="../../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
-  <script src="../js/plugins/tables.min.js"></script>
-  <script src="../js/plugins/lists.min.js"></script>
-  <script src="../js/plugins/colors.min.js"></script>
-  <script src="../js/plugins/media_manager.min.js"></script>
-  <script src="../js/plugins/font_family.min.js"></script>
-  <script src="../js/plugins/font_size.min.js"></script>
-  <script src="../js/plugins/block_styles.min.js"></script>
-  <script src="../js/plugins/video.min.js"></script>
+  <script src="../../js/plugins/tables.min.js"></script>
+  <script src="../../js/plugins/lists.min.js"></script>
+  <script src="../../js/plugins/colors.min.js"></script>
+  <script src="../../js/plugins/media_manager.min.js"></script>
+  <script src="../../js/plugins/font_family.min.js"></script>
+  <script src="../../js/plugins/font_size.min.js"></script>
+  <script src="../../js/plugins/block_styles.min.js"></script>
+  <script src="../../js/plugins/video.min.js"></script>
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, theme: 'red'})
+          $('#edit').editable({inlineMode: false, theme: 'gray'})
       });
   </script>
 </body>
