--- a/examples/file_upload.html
+++ b/examples/file_upload.html
@@ -42,7 +42,7 @@
 
   <script>
       $(function(){
-        $('#edit').editable({inlineMode: false, buttons: ['bold', 'italic', 'underline', 'uploadFile', 'html']})
+        $('#edit').editable({inlineMode: false, buttons: ['bold', 'italic', 'underline', 'createLink', 'uploadFile', 'html']})
       });
   </script>
 </body>
