Fix custom buttons and dropdowns.

--- a/examples/custom_buttons.html
+++ b/examples/custom_buttons.html
@@ -54,8 +54,11 @@
                 type: 'font',
                 value: 'fa fa-info'
               },
-              callback: function (){
+              callback: function () {
                 alert ('Hello!')
+              },
+              refresh: function () {
+                console.log ('do alert refresh');
               }
             },
 
