Fix CSS for 2 editors.

--- a/examples/two_editors.html
+++ b/examples/two_editors.html
@@ -44,8 +44,8 @@
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, zIndex: 2002})
-          $('#edit-i').editable({inlineMode: false, theme: 'dark', zIndex: 2001})
+          $('#edit').editable({inlineMode: false})
+          $('#edit-i').editable({inlineMode: false, theme: 'dark'})
       });
   </script>
 </body>
