Fix examples file.

--- a/examples/custom_dropdown.html
+++ b/examples/custom_dropdown.html
@@ -57,6 +57,9 @@
               refresh: function () {
                 console.log ('do refresh');
               },
+              refreshOnShow: function () {
+                console.log ('do refresh when show');
+              },
               options: {
                 'Call taxi': function () {
                   alert ('Call a taxi!');
