--- a/examples/inline_with_no_buttons.html
+++ b/examples/inline_with_no_buttons.html
@@ -3,6 +3,7 @@
 <head>
 	<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
+  <link href="../css/froala_style.min.css" rel="stylesheet" type="text/css">
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
