--- a/examples/events/blur_and_focus.html
+++ b/examples/events/blur_and_focus.html
@@ -3,7 +3,7 @@
 <head>
 	<link href="../../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../../css/froala_editor.min.css" rel="stylesheet" type="text/css">
-
+  <link href="../../css/froala_style.min.css" rel="stylesheet" type="text/css">
     <style>
         body {
             text-align: center;
