--- a/examples/inline.html
+++ b/examples/inline.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
+  <link href="../css/froala_style.min.css" rel="stylesheet" type="text/css">
 
 
     <style>
