--- a/examples/basic.html
+++ b/examples/basic.html
@@ -48,6 +48,7 @@
   <script src="../js/plugins/block_styles.min.js"></script>
   <script src="../js/plugins/media_manager.min.js"></script>
   <script src="../js/plugins/video.min.js"></script>
+  <script src="../js/plugins/char_counter.min.js"></script>
 
   <script>
       $(function(){
