Fixes for release 1.2.3.

--- a/examples/custom_buttons.html
+++ b/examples/custom_buttons.html
@@ -48,7 +48,7 @@
 
   <script>
       $(function(){
-          $('#edit').editable({inlineMode: false, buttons: ['bold', 'italic', 'subscript', 'superscript', 'formatBlock', 'alert', 'clear', 'image', 'add'], blockTags: ['p'], customButtons: {
+          $('#edit').editable({inlineMode: false, buttons: ['bold', 'italic', 'subscript', 'superscript',  'removeFormat', 'formatBlock', 'alert', 'clear', 'image', 'add'], blockTags: ['p'], customButtons: {
             alert: {
               title: 'Alert',
               icon: {
