--- a/examples/events/blur_and_focus.html
+++ b/examples/events/blur_and_focus.html
@@ -51,7 +51,7 @@
   <script>
       $(function(){
         $('.edit').editable({
-          inlineMode: true,
+          inlineMode: false,
           tabSpaces: false
         });
 
