Fix issues. Add urls plugin.

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -41,6 +41,7 @@
     <script src="../js/froala_editor_ie8.min.js"></script>
   <![endif]-->
   <script src="../js/plugins/tables.min.js"></script>
+  <script src="../js/plugins/urls.min.js"></script>
   <script src="../js/plugins/lists.min.js"></script>
   <script src="../js/plugins/colors.min.js"></script>
   <script src="../js/plugins/font_family.min.js"></script>
