Update char counter plugin for direction RTL.

--- a/examples/direction_basic_mode.html
+++ b/examples/direction_basic_mode.html
@@ -45,6 +45,7 @@
   <script src="../js/plugins/font_size.min.js"></script>
   <script src="../js/plugins/block_styles.min.js"></script>
   <script src="../js/plugins/video.min.js"></script>
+  <script src="../js/plugins/char_counter.min.js"></script>
 
   <script>
       $(function(){
