Update fullscreen plugin.

--- a/examples/fullscreen.html
+++ b/examples/fullscreen.html
@@ -17,6 +17,10 @@
             margin: auto;
             text-align: left;
         }
+
+        .froala-view {
+          text-align: left;
+        }
     </style>
 </head>
 
