Fixes froala/wysiwyg-editor#405.

--- a/examples/custom_block_styles.html
+++ b/examples/custom_block_styles.html
@@ -50,7 +50,7 @@
       $(function(){
           $('#edit').editable({
             inlineMode: false,
-            buttons: ['bold', 'italic', 'underline', 'strikeThrough', 'fontSize', 'color', 'sep', 'formatBlock', 'blockStyle', 'align', 'insertOrderedList', 'insertUnorderedList', 'outdent', 'indent', 'sep', 'createLink', 'insertImage', 'insertVideo', 'undo', 'redo', 'inserthorizontalrule'],
+            buttons: ['bold', 'italic', 'underline', 'strikeThrough', 'fontSize', 'color', 'sep', 'formatBlock', 'blockStyle', 'align', 'insertOrderedList', 'insertUnorderedList', 'outdent', 'indent', 'sep', 'createLink', 'insertImage', 'insertVideo', 'undo', 'redo', 'insertHorizontalRule'],
             blockStyles: {
               'p': {
                 'class1': 'Class1',
