--- a/examples/code_preview.html
+++ b/examples/code_preview.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href="../css/froala_editor.min.css" rel="stylesheet" type="text/css">
   <link href="../css/froala_style.min.css" rel="stylesheet" type="text/css">
 
@@ -43,7 +43,7 @@
     </div>
   </section>
 
-  <script src="../js/libs/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../js/froala_editor_ie8.min.js"></script>
