Include FontAwesome and jQuery from CDNJS.

--- a/examples/iframe/index.html
+++ b/examples/iframe/index.html
@@ -28,7 +28,7 @@
     </iframe>
   </section>
 
-  <script src="../../js/libs/jquery-1.11.1.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="../../js/froala_editor.min.js"></script>
   <!--[if lt IE 9]>
     <script src="../../js/froala_editor_ie8.min.js"></script>
