--- a/examples/require_js/index.html
+++ b/examples/require_js/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="../../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../../css/froala_editor.min.css" rel="stylesheet" type="text/css">
   <link href="../../css/froala_style.min.css" rel="stylesheet" type="text/css">
 
