--- a/examples/iframe/content.html
+++ b/examples/iframe/content.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="../../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="../../css/froala_editor.min.css" rel="stylesheet" type="text/css">
   <link href="../../css/froala_style.min.css" rel="stylesheet" type="text/css">
 
