Improve link plugin. Add linkAttributes option.

--- a/examples/link_attributes.html
+++ b/examples/link_attributes.html
@@ -52,20 +52,10 @@
   <script>
       $(function(){
         $('#edit').editable({inlineMode: false,
-          linkList: [
-          {
-            body: "Google",
-            title: "An awesome search engine",
-            href: "http://google.com",
-            blank: true
-          },
-          {
-            body: "Froala",
-            title: "A website builder for everyone",
-            href: "http://froala.com",
-            blank: false
+          linkAttributes: {
+            title: 'Title'
           }
-        ]})
+        })
       });
   </script>
 </body>
