Add entities plugin. Fixes froala/wysiwyg-editor#482.

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -51,6 +51,7 @@
   <script src="../js/plugins/media_manager.min.js"></script>
   <script src="../js/plugins/video.min.js"></script>
   <script src="../js/plugins/char_counter.min.js"></script>
+  <script src="../js/plugins/entities.min.js"></script>
 
   <script>
       $(function(){
