Update fullscreen plugin.

--- a/examples/fullscreen.html
+++ b/examples/fullscreen.html
@@ -60,7 +60,8 @@
         $('#edit').editable({
           inlineMode: false,
           buttons: $.merge(['fullscreen'], $.Editable.DEFAULTS.buttons),
-          maxHeight: 300
+          maxHeight: 300,
+          toolbarFixed: false
         })
       });
   </script>
