On URL paste do not trigger contentChanged twice.

--- a/examples/events/contentChanged.html
+++ b/examples/events/contentChanged.html
@@ -43,6 +43,7 @@
   <script src="../../js/plugins/block_styles.min.js"></script>
   <script src="../../js/plugins/video.min.js"></script>
   <script src="../../js/plugins/lists.min.js"></script>
+  <script src="../../js/plugins/urls.min.js"></script>
 
   <script>
       $(function(){
