--- a/html/events/image_removed.html
+++ b/html/events/image_removed.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="../../css/plugins/image_manager.css">
   <link rel="stylesheet" href="../../css/plugins/image.css">
   <link rel="stylesheet" href="../../css/plugins/line_breaker.css">
-  <link rel="stylesheet" href="../../css/plugins/link.css">
   <link rel="stylesheet" href="../../css/plugins/table.css">
   <link rel="stylesheet" href="../../css/plugins/video.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
@@ -23,7 +22,7 @@
       }
 
       div#editor {
-          width: 80%;
+          width: 81%;
           margin: auto;
           text-align: left;
       }
@@ -32,7 +31,6 @@
 
 <body>
   <div id="editor">
-      <!-- <button id="x">x</button> -->
       <div id='edit' style="margin-top: 30px;">
         <h1>Click and edit</h1>
 
@@ -100,21 +98,21 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
-  <script src="../../js/froala_editor.js"></script>
-  <script src="../../js/plugins/align.js"></script>
-  <script src="../../js/plugins/code_view.js"></script>
-  <script src="../../js/plugins/colors.js"></script>
-  <script src="../../js/plugins/emoticons.js"></script>
-  <script src="../../js/plugins/font_size.js"></script>
-  <script src="../../js/plugins/font_family.js"></script>
-  <script src="../../js/plugins/image.js"></script>
-  <script src="../../js/plugins/image_manager.js"></script>
-  <script src="../../js/plugins/line_breaker.js"></script>
-  <script src="../../js/plugins/link.js"></script>
-  <script src="../../js/plugins/lists.js"></script>
-  <script src="../../js/plugins/styles.js"></script>
-  <script src="../../js/plugins/table.js"></script>
-  <script src="../../js/plugins/video.js"></script>
+  <script src="../../js/froala_editor.min.js"></script>
+  <script src="../../js/plugins/align.min.js"></script>
+  <script src="../../js/plugins/code_view.min.js"></script>
+  <script src="../../js/plugins/colors.min.js"></script>
+  <script src="../../js/plugins/emoticons.min.js"></script>
+  <script src="../../js/plugins/font_size.min.js"></script>
+  <script src="../../js/plugins/font_family.min.js"></script>
+  <script src="../../js/plugins/image.min.js"></script>
+  <script src="../../js/plugins/image_manager.min.js"></script>
+  <script src="../../js/plugins/line_breaker.min.js"></script>
+  <script src="../../js/plugins/link.min.js"></script>
+  <script src="../../js/plugins/lists.min.js"></script>
+  <script src="../../js/plugins/inline_style.min.js"></script>
+  <script src="../../js/plugins/table.min.js"></script>
+  <script src="../../js/plugins/video.min.js"></script>
 
   <script>
     $(function(){
