--- a/html/init_on_click/full.html
+++ b/html/init_on_click/full.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="../../css/plugins/image_manager.css">
   <link rel="stylesheet" href="../../css/plugins/image.css">
   <link rel="stylesheet" href="../../css/plugins/line_breaker.css">
-  <link rel="stylesheet" href="../../css/plugins/link.css">
   <link rel="stylesheet" href="../../css/plugins/table.css">
   <link rel="stylesheet" href="../../css/plugins/char_counter.css">
   <link rel="stylesheet" href="../../css/plugins/video.css">
@@ -26,7 +25,7 @@
       }
 
       div#editor {
-          width: 80%;
+          width: 81%;
           margin: auto;
           text-align: left;
       }
@@ -35,7 +34,6 @@
 
 <body>
   <div id="editor">
-      <!-- <button id="x">x</button> -->
       <div id='edit' style="margin-top: 30px;">
         <h1>Click and edit</h1>
 
@@ -103,29 +101,29 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
-  <script type="text/javascript" src="../../js/froala_editor.js" ></script>
-  <script type="text/javascript" src="../../js/plugins/align.js"></script>
-  <script type="text/javascript" src="../../js/plugins/code_view.js"></script>
-  <script type="text/javascript" src="../../js/plugins/colors.js"></script>
-  <script type="text/javascript" src="../../js/plugins/emoticons.js"></script>
-  <script type="text/javascript" src="../../js/plugins/font_size.js"></script>
-  <script type="text/javascript" src="../../js/plugins/font_family.js"></script>
-  <script type="text/javascript" src="../../js/plugins/image.js"></script>
-  <script type="text/javascript" src="../../js/plugins/file.js"></script>
-  <script type="text/javascript" src="../../js/plugins/image_manager.js"></script>
-  <script type="text/javascript" src="../../js/plugins/line_breaker.js"></script>
-  <script type="text/javascript" src="../../js/plugins/link.js"></script>
-  <script type="text/javascript" src="../../js/plugins/lists.js"></script>
-  <script type="text/javascript" src="../../js/plugins/paragraph_format.js"></script>
-  <script type="text/javascript" src="../../js/plugins/paragraph_style.js"></script>
-  <script type="text/javascript" src="../../js/plugins/video.js"></script>
-  <script type="text/javascript" src="../../js/plugins/table.js"></script>
-  <script type="text/javascript" src="../../js/plugins/url.js"></script>
-  <script type="text/javascript" src="../../js/plugins/entities.js"></script>
-  <script type="text/javascript" src="../../js/plugins/char_counter.js"></script>
-  <script type="text/javascript" src="../../js/plugins/inline_style.js"></script>
-  <script type="text/javascript" src="../../js/plugins/save.js"></script>
-  <script type="text/javascript" src="../../js/plugins/fullscreen.js"></script>
+  <script type="text/javascript" src="../../js/froala_editor.min.js" ></script>
+  <script type="text/javascript" src="../../js/plugins/align.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/code_view.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/colors.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/emoticons.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/font_size.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/font_family.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/image.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/file.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/image_manager.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/line_breaker.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/link.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/lists.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/paragraph_format.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/paragraph_style.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/video.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/table.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/url.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/entities.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/char_counter.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/inline_style.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/save.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/fullscreen.min.js"></script>
   <script type="text/javascript" src="../../js/languages/ro.js"></script>
 
   <script>
@@ -133,10 +131,6 @@
       $('#edit').froalaEditor({
         enter: $.FroalaEditor.ENTER_P,
         initOnClick: true
-      })
-
-      $('#x').click(function (e) {
-        $('#edit').data('froala.editor').html.set('<p>foo<a href="s">' + $.FroalaEditor.MARKERS + 'bar</a></p>');
       })
     });
   </script>
