--- a/html/themes/royal_theme.html
+++ b/html/themes/royal_theme.html
@@ -7,9 +7,19 @@
   <link rel="stylesheet" href="../../css/froala_editor.css">
   <link rel="stylesheet" href="../../css/froala_style.css">
   <link rel="stylesheet" href="../../css/plugins/code_view.css">
+  <link rel="stylesheet" href="../../css/plugins/colors.css">
+  <link rel="stylesheet" href="../../css/plugins/emoticons.css">
+  <link rel="stylesheet" href="../../css/plugins/image_manager.css">
   <link rel="stylesheet" href="../../css/plugins/image.css">
-  <link rel="stylesheet" href="../../css/plugins/video.css">
+  <link rel="stylesheet" href="../../css/plugins/line_breaker.css">
   <link rel="stylesheet" href="../../css/plugins/table.css">
+  <link rel="stylesheet" href="../../css/plugins/char_counter.css">
+  <link rel="stylesheet" href="../../css/plugins/video.css">
+  <link rel="stylesheet" href="../../css/plugins/fullscreen.css">
+  <link rel="stylesheet" href="../../css/plugins/file.css">
+
+  <link rel="stylesheet" href="../../css/themes/royal.css">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 
   <style>
@@ -49,22 +59,34 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
   <script src="../../js/froala_editor.min.js"></script>
-  <script src="../../js/plugins/code_view.min.js"></script>
-  <script src="../../js/plugins/font_size.min.js"></script>
-  <script src="../../js/plugins/align.min.js"></script>
-  <script src="../../js/plugins/font_family.min.js"></script>
-  <script src="../../js/plugins/paragraph_style.min.js"></script>
-  <script src="../../js/plugins/lists.min.js"></script>
-  <script src="../../js/plugins/image.min.js"></script>
-  <script src="../../js/plugins/link.min.js"></script>
-  <script src="../../js/plugins/video.min.js"></script>
-  <script src="../../js/plugins/table.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/align.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/code_view.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/colors.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/emoticons.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/font_size.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/font_family.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/image.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/file.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/image_manager.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/line_breaker.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/link.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/lists.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/paragraph_format.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/paragraph_style.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/video.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/table.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/url.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/entities.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/char_counter.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/inline_style.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/save.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/fullscreen.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/quote.min.js"></script>
 
   <script>
     $(function(){
       $('#edit').froalaEditor({
-        enter: $.FroalaEditor.ENTER_P,
-        height: 300
+        theme: 'royal'
       })
     });
   </script>
