Fixes froala/wysiwyg-editor#786.

--- a/html/tables.html
+++ b/html/tables.html
@@ -102,6 +102,22 @@
 
 
       </div>
+
+      <table style="width: 100%;">
+        <tr>
+          <td>asdasd</td>
+          <td>
+            <table style="width: 100%;">
+              <tr><td>asdasd</td><td>asdasdasd</td></tr>
+              <tr><td>asdasd</td><td>asdasdasd</td></tr>
+              <tr><td>asdasd</td><td>asdasdasd</td></tr>
+            </table>
+          </td>
+          <td>asdasdasd</td>
+          <td>asdasdasd</td>
+        </tr>
+        <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
+      </table>
   </section>
 
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
