Fix image.removed was passing the DOM element instead of jQuery object.

--- a/html/events/image_removed.html
+++ b/html/events/image_removed.html
@@ -121,6 +121,7 @@
       })
       .on ('froalaEditor.image.removed', function (e, editor, $img) {
         console.log ('image removed', $img);
+        console.log ('image src', $img.attr('src'))
       })
     });
   </script>
