Correct event names.

--- a/html/init_on_button.html
+++ b/html/init_on_button.html
@@ -117,7 +117,7 @@
       $('#edit').froalaEditor({
         enter: $.FroalaEditor.ENTER_P
       })
-      .on('froala.editor.contentChanged', function () {
+      .on('froalaEditor.contentChanged', function () {
         console.log ('content changed');
       })
     });
